--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,52 +1,57 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppThemeGreen" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemeDefault" parent="Theme.MaterialComponents.Light">
+        <item name="colorPrimary">@color/whitePrimary</item>
+        <item name="colorPrimaryDark">@color/whitePrimaryDark</item>
+        <item name="colorAccent">@color/whiteAccent</item>
+    </style>
+    <style name="AppThemeGreen" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/greenPrimary</item>
         <item name="colorPrimaryDark">@color/greenPrimaryDark</item>
         <item name="colorAccent">@color/greenAccent</item>
     </style>
-    <style name="AppThemeRed" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemeRed" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/redPrimary</item>
         <item name="colorPrimaryDark">@color/redPrimaryDark</item>
         <item name="colorAccent">@color/redAccent</item>
     </style>
-    <style name="AppThemePink" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemePink" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/pinkPrimary</item>
         <item name="colorPrimaryDark">@color/pinkPrimaryDark</item>
         <item name="colorAccent">@color/pinkAccent</item>
     </style>
-    <style name="AppThemePurple" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemePurple" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/purplePrimary</item>
         <item name="colorPrimaryDark">@color/purplePrimaryDark</item>
         <item name="colorAccent">@color/purpleAccent</item>
     </style>
-    <style name="AppThemeIndigo" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemeIndigo" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/indigoPrimary</item>
         <item name="colorPrimaryDark">@color/indigoPrimaryDark</item>
         <item name="colorAccent">@color/indigoAccent</item>
     </style>
-    <style name="AppThemeBlue" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemeBlue" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/bluePrimary</item>
         <item name="colorPrimaryDark">@color/bluePrimaryDark</item>
         <item name="colorAccent">@color/blueAccent</item>
     </style>
-    <style name="AppThemeTeal" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemeTeal" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/tealPrimary</item>
         <item name="colorPrimaryDark">@color/tealPrimaryDark</item>
         <item name="colorAccent">@color/tealAccent</item>
     </style>
-    <style name="AppThemeOrange" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemeOrange" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/orangePrimary</item>
         <item name="colorPrimaryDark">@color/orangePrimaryDark</item>
         <item name="colorAccent">@color/orangeAccent</item>
     </style>
-    <style name="AppThemeBrown" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemeBrown" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/brownPrimary</item>
         <item name="colorPrimaryDark">@color/brownPrimaryDark</item>
         <item name="colorAccent">@color/brownAccent</item>
     </style>
-    <style name="AppThemeBlueGrey" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppThemeBlueGrey" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/blueGreyPrimary</item>
         <item name="colorPrimaryDark">@color/blueGreyPrimaryDark</item>
         <item name="colorAccent">@color/blueGreyAccent</item>
