폴더 정리 및 게시판 기초 작업

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -188,7 +188,7 @@
 
                 <view
                     android:id="@+id/viewPagerMeal"
-                    class="dev.jun0.dcalimi.HeightWrappingViewPager"
+                    class="dev.jun0.dcalimi.view.HeightWrappingViewPager"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
