--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:menu="@menu/bottom_navigation_menu" />
 
     <FrameLayout
-        android:id="@+id/frameLayoutMain"
+        android:id="@+id/frameLayoutMainActivity"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/grey_50"
