--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="whitePrimary">#fafafa</color>
-    <color name="whitePrimaryDark">#c7c7c7</color>
+    <color name="whitePrimary">#eeeeee</color>
+    <color name="whitePrimaryDark">#bcbcbc</color>
     <color name="whiteAccent">#000000</color>
     <color name="whiteTimeScheduleSecondary">#f5f5f5</color>
 
@@ -43,7 +43,7 @@
     <color name="orangePrimary">#f57c00</color>
     <color name="orangePrimaryDark">#bb4d00</color>
     <color name="orangeAccent">#ffad42</color>
-    <color name="orangeTimeScheduleSecondary">#eff3e0</color>
+    <color name="orangeTimeScheduleSecondary">#fff3e0</color>
 
     <color name="brownPrimary">#6d4c41</color>
     <color name="brownPrimaryDark">#40241a</color>
@@ -65,7 +65,9 @@
 
     <color name="timeSchedulePrimary">#ffffff</color>
 
-    <color name="grey_50">#FAFAFA</color>
+    <color name="grey_50">#fafafa</color>
+    <color name="grey_200">#eeeeee</color>
+    <color name="grey_600">#757575</color>
 
     <color name="black">#000000</color>
 
