--- a/app/src/main/res/layout/fragment_suggestion.xml
+++ b/app/src/main/res/layout/fragment_suggestion.xml
@@ -59,7 +59,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_action_button"
+        android:id="@+id/buttonCreatePost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
