스플래시 화면 아이콘 업데이트

--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -3,7 +3,7 @@
 
     <item android:drawable="?android:colorPrimary" />
 
-    <item android:drawable="@drawable/ic_directions_bus_24dp"
+    <item android:drawable="@drawable/ic_splash_logo"
             android:gravity="center"/>
 
 </layer-list>
